--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,6 +9,18 @@
 }
 
 @media screen and (max-width:375px) and (min-width:280px) {
+  .eltripLogo{
+    width: 90%;
+    left: 5% !important;
+    height: 55px;
+    display: block;
+    top: 34%;
+  }
+
+  h1.h1yellowpriveat{
+    font-size: 30px;
+  }
+
   div#navbarSupported {
     justify-content: space-between;
   }
@@ -21,7 +33,7 @@
     font-size: 16px !important;
   }
 
-  form#d-flex {
+  #d-flex {
     width: 55% !important;
     padding: 0 !important;
   }
@@ -41,7 +53,7 @@
 
   .width-Click button {
     width: 90%;
-    font-size: 13px;
+    font-size: 15px;
   }
 
   .link-logo-new {
@@ -70,7 +82,7 @@
 
   .cover-new {
     width: 90%;
-    font-size: 11px !important;
+    font-size: 15px !important;
   }
 
   ul.dirction-new {
@@ -127,10 +139,6 @@
 
   p.list-link {
     font-size: 14px;
-  }
-
-  .rides {
-    padding: 4% 0;
   }
 
   .condition1 {
@@ -193,12 +201,7 @@
 
   span.icon-car {
     width: 57%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     font-size: 13px;
-    margin-top: 0%;
-    margin-bottom: 3%;
   }
 
   span.svg-car {
@@ -229,11 +232,6 @@
     margin-left: 25%;
   }
 
-  .CarCarry {
-    width: 100%;
-    margin-top: 6%;
-  }
-
   .display {
     width: 100%;
     margin: 0;
@@ -246,7 +244,6 @@
 
   h1.aboutofcar {
     font-size: 18px;
-    color: #303747;
   }
 
   .car-carry {
@@ -1496,11 +1493,21 @@
 }
 
 @media screen and (max-width:414px) and (min-width:375px) {
+  .eltripLogo{
+    width: 70%;
+    left: 15% !important;
+    top: 34%;
+  }
+
+  h1.h1yellowpriveat{
+    font-size: 40px;
+  }
+
   .nav-link {
     font-size: 16px !important;
   }
 
-  form#d-flex {
+  #d-flex {
     width: 60% !important;
     padding: 0 !important;
   }
@@ -1558,16 +1565,6 @@
 
   h1.aboutofcar {
     font-size: 20px;
-    color: #303747;
-  }
-
-  h5.aboutofcar {
-    display: inline-block;
-    font-size: 14px;
-    padding-top: 10px;
-    text-transform: uppercase;
-    width: 100%;
-    color: #999;
   }
 
   .car-carry {
@@ -1586,7 +1583,7 @@
   .car-carry3 {
     justify-content: space-between;
     width: 100%;
-    height: 120px;
+    height: 150px;
     margin: 4% 0;
   }
 
@@ -1725,11 +1722,6 @@
   li.forride,
   li.spareseat {
     line-height: 25px;
-  }
-
-  .space {
-    width: 100%;
-    margin-top: 5%;
   }
 
   .conteainer {
@@ -2770,6 +2762,16 @@
 }
 
 @media screen and (max-width:540px) and (min-width:414px) {
+  .eltripLogo{
+    width: 60%;
+    left: 20% !important;
+    top: 28%;
+  }
+
+  h1.h1yellowpriveat{
+    font-size: 40px;
+  }
+
   .width {
     width: 50%;
   }
@@ -2778,7 +2780,7 @@
     font-size: 16px !important;
   }
 
-  form#d-flex {
+  #d-flex {
     width: 60% !important;
     padding: 0 !important;
   }
@@ -2833,10 +2835,6 @@
     display: none;
   }
 
-  .CarCarry {
-    width: 100%;
-    margin-top: 6%;
-  }
 
   .display {
     width: 100%;
@@ -2850,16 +2848,6 @@
 
   h1.aboutofcar {
     font-size: 25px;
-    color: #303747;
-  }
-
-  h5.aboutofcar {
-    display: inline-block;
-    font-size: 14px;
-    padding-top: 10px;
-    text-transform: uppercase;
-    width: 100%;
-    color: #999;
   }
 
   .car-carry {
@@ -2876,7 +2864,7 @@
   .car-carry3 {
     width: 95%;
     margin-left: 2.5%;
-    height: 115px;
+    height: 150px;
     padding: 2% 1%;
     margin-top: 4%;
     justify-content: space-between;
@@ -2960,15 +2948,6 @@
     width: 75%;
   }
 
-  section.rides-register-daily {
-    width: 100%;
-    margin-top: 10%;
-  }
-
-  .rides {
-    width: 90%;
-    margin-left: 5%;
-  }
 
   .register {
     display: block;
@@ -3015,7 +2994,6 @@
 
   h3.address {
     font-size: 32px;
-    color: #303747;
   }
 
   .rentalscar {
@@ -3110,17 +3088,8 @@
     width: 100%;
   }
 
-  a.linklaster {
-    color: inherit;
-    transition: 2s;
-  }
-
   a.width {
     font-size: 14px;
-  }
-
-  a.linklaster:hover {
-    color: #f75f62;
   }
 
   span.icon-car {
@@ -3131,14 +3100,6 @@
   span.svg-car {
     width: 15%;
     height: 30px;
-  }
-
-  .space.no-top {
-    width: 93%;
-    margin-left: 3.5%;
-    background-color: #c5fdf3;
-    border-radius: 2.5rem;
-    padding: 3% 0;
   }
 
   .width-new {
@@ -3170,26 +3131,7 @@
 
   li.forride,
   li.spareseat {
-    display: flex;
-    align-items: center;
-    margin-bottom: 2%;
-    background: #e9edf3 none repeat scroll 0 0;
-    border: 1px solid #e7dcdc73;
-    border-radius: 5px;
     padding: 3% 1% 3% 4%;
-    transition: 1s;
-  }
-
-  li.forride:hover,
-  li.spareseat:hover {
-    box-shadow: 1px 0px 20px 6px rgb(0 20 255 / 28%);
-    border-color: transparent;
-  }
-
-  .rider-avatar img {
-    box-shadow: 5px 10px 20px 0 rgb(46 58 87 / 36%);
-    border-color: #ddbcbc73;
-    border-radius: 50%;
   }
 
   .rider-meta {
@@ -3229,11 +3171,6 @@
   .number-one {
     width: 100%;
     margin: 3% 0;
-  }
-
-  .space {
-    width: 100%;
-    margin-top: 5%;
   }
 
   .conteainer {
@@ -4316,7 +4253,7 @@
     font-size: 16px !important;
   }
 
-  form#d-flex {
+  #d-flex {
     width: 60% !important;
     padding: 0 !important;
   }
@@ -4412,10 +4349,20 @@
     width: 100%;
   }
 
-  .Words-slider-top {
-    top: 5% !important;
-    height: auto !important;
-    left: 15% !important;
+  .Words-slider-top,
+  svg#icon-lock,
+  svg#icon-check {
+    display: none !important;
+  }
+
+  .eltripLogo{
+    width: 50%;
+    left: 25% !important;
+    top: 40%;
+  }
+
+  h1.h1yellowpriveat{
+    font-size: 45px;
   }
 
   .words-sliders-top {
@@ -4448,11 +4395,6 @@
     display: none;
   }
 
-  .CarCarry {
-    width: 100%;
-    margin-top: 6%;
-  }
-
   .display {
     width: 100%;
   }
@@ -4464,16 +4406,6 @@
 
   h1.aboutofcar {
     font-size: 32px;
-    color: #303747;
-  }
-
-  h5.aboutofcar {
-    display: inline-block;
-    font-size: 14px;
-    padding-top: 10px;
-    text-transform: uppercase;
-    width: 100%;
-    color: #999;
   }
 
   .car-carry {
@@ -4495,8 +4427,6 @@
     align-items: center;
     width: 90%;
     height: 130px;
-    background-color: white;
-    border: 1px solid #ede7e79c;
     margin-bottom: 2%;
   }
 
@@ -4576,19 +4506,6 @@
     font-size: 20px !important;
   }
 
-  section.rides-register-daily {
-    width: 100%;
-    margin-top: 5%;
-  }
-
-  .rides {
-    width: 93%;
-    margin-left: 3.5%;
-    background-color: #c5fdf3;
-    padding: 2% 0;
-    border-radius: 2.5rem;
-  }
-
   .register {
     display: block;
     width: 90%;
@@ -4638,7 +4555,6 @@
 
   h3.address {
     font-size: 32px;
-    color: #303747;
   }
 
   .rentalscar {
@@ -4726,26 +4642,13 @@
     width: 100%;
   }
 
-  a.linklaster {
-    color: inherit;
-    transition: 2s;
-  }
-
   a.width {
     font-size: 14px;
   }
 
-  a.linklaster:hover {
-    color: #f75f62;
-  }
-
   span.icon-car {
     width: 67%;
-    display: flex;
-    align-items: center;
     justify-content: flex-start;
-    margin-top: 0%;
-    margin-bottom: 3%;
   }
 
   span.svg-car {
@@ -4861,14 +4764,6 @@
     color: white;
   }
 
-  .space.no-top {
-    width: 100%;
-    margin-left: 0%;
-    background-color: #c5fdf3;
-    border-radius: 2.5rem;
-    padding: 3% 0;
-  }
-
   .width-new {
     width: 100%;
     margin-left: 0%;
@@ -4898,26 +4793,7 @@
 
   li.forride,
   li.spareseat {
-    display: flex;
-    align-items: center;
-    margin-bottom: 2%;
-    background: #e9edf3 none repeat scroll 0 0;
-    border: 1px solid #e7dcdc73;
-    border-radius: 5px;
     padding: 3% 1% 3% 4%;
-    transition: 1s;
-  }
-
-  li.forride:hover,
-  li.spareseat:hover {
-    box-shadow: 1px 0px 20px 6px rgb(0 20 255 / 28%);
-    border-color: transparent;
-  }
-
-  .rider-avatar img {
-    box-shadow: 5px 10px 20px 0 rgb(46 58 87 / 36%);
-    border-color: #ddbcbc73;
-    border-radius: 50%;
   }
 
   .rider-meta {
@@ -4948,11 +4824,6 @@
     color: #f75f62;
     position: absolute;
     right: 0;
-  }
-
-  .space {
-    width: 100%;
-    margin-top: 5%;
   }
 
   .conteainer {
@@ -5991,10 +5862,21 @@
     font-size: 32px !important;
   }
 
+  
   .Words-slider-top {
-    top: 8% !important;
+    top: 0% !important;
     height: auto !important;
     left: 15% !important;
+  }
+
+  .eltripLogo{
+    width: 40%;
+    left: 30% !important;
+    top: 90%;
+  }
+
+  .prev-slider, .next-slider{
+    top: 85% !important;
   }
 
   .clickorstop {
@@ -6016,11 +5898,6 @@
     transform: translate(-20px, 47px) !important;
   }
 
-  .CarCarry {
-    width: 100%;
-    margin-top: 6%;
-  }
-
   .display {
     width: 100%;
     margin-left: 0;
@@ -6033,16 +5910,6 @@
 
   h1.aboutofcar {
     font-size: 32px;
-    color: #303747;
-  }
-
-  h5.aboutofcar {
-    display: inline-block;
-    font-size: 14px;
-    padding-top: 10px;
-    text-transform: uppercase;
-    width: 100%;
-    color: #999;
   }
 
   .car-carry {
@@ -6056,8 +5923,6 @@
     display: flex;
     align-items: center;
     width: 48%;
-    background-color: white;
-    border: 1px solid #ede7e79c;
     height: 130px;
   }
 
@@ -6215,19 +6080,6 @@
     color: white;
   }
 
-  section.rides-register-daily {
-    width: 100%;
-    margin-top: 5%;
-  }
-
-  .rides {
-    width: 93%;
-    margin-left: 3.5%;
-    background-color: #c5fdf3;
-    padding: 2% 0;
-    border-radius: 2.5rem;
-  }
-
   .register {
     display: flex;
     width: 90%;
@@ -6276,7 +6128,6 @@
 
   h3.address {
     font-size: 32px;
-    color: #303747;
   }
 
   .MEDIA {
@@ -6364,39 +6215,17 @@
     width: 100%;
   }
 
-  a.linklaster {
-    color: inherit;
-    transition: 2s;
-  }
-
   a.width {
     font-size: 14px;
   }
 
-  a.linklaster:hover {
-    color: #f75f62;
-  }
-
   span.icon-car {
     width: 67%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 0%;
-    margin-bottom: 3%;
   }
 
   span.svg-car {
     width: 19%;
     height: 30px;
-  }
-
-  .space.no-top {
-    width: 100%;
-    margin-left: 0%;
-    background-color: #c5fdf3;
-    border-radius: 2.5rem;
-    padding: 3% 0;
   }
 
   .width-new {
@@ -6430,12 +6259,6 @@
   li.spareseat {
     justify-content: space-between;
     padding: 3% 1% 3% 4%;
-  }
-
-  li.forride:hover,
-  li.spareseat:hover {
-    box-shadow: 1px 0px 20px 6px rgb(0 20 255 / 28%);
-    border-color: transparent;
   }
 
   .rider-avatar {
@@ -6496,11 +6319,6 @@
     color: #f75f62;
     position: absolute;
     right: 0;
-  }
-
-  .space {
-    width: 100%;
-    margin-top: 5%;
   }
 
   .conteainer {
@@ -7304,18 +7122,28 @@
     width: 100% !important;
     margin-left: 0 !important;
   }
-
-  .Words-slider-top {
-    top: 8% !important;
-    height: auto !important;
-    left: 15% !important;
-  }
-
+ 
   .Prevourcients,
   .Nextourcients {
     width: 8% !important;
     height: 42px !important;
     font-size: 32px !important;
+  }
+
+  .Words-slider-top {
+    top: 0% !important;
+    height: auto !important;
+    left: 15% !important;
+  }
+
+  .eltripLogo{
+    width: 40%;
+    left: 30% !important;
+    top: 90%;
+  }
+
+  .prev-slider, .next-slider{
+    top: 85% !important;
   }
 
   .clickorstop {
@@ -7332,11 +7160,6 @@
     transform: translate(-13px, 47px) !important;
   }
 
-  .CarCarry {
-    width: 100%;
-    margin-top: 6%;
-  }
-
   .display {
     width: 100%;
     margin-left: 0;
@@ -7349,16 +7172,6 @@
 
   h1.aboutofcar {
     font-size: 32px;
-    color: #303747;
-  }
-
-  h5.aboutofcar {
-    display: inline-block;
-    font-size: 14px;
-    padding-top: 10px;
-    text-transform: uppercase;
-    width: 100%;
-    color: #999;
   }
 
   .car-carry {
@@ -7523,19 +7336,6 @@
     color: white;
   }
 
-  section.rides-register-daily {
-    width: 100%;
-    margin-top: 5%;
-  }
-
-  .rides {
-    width: 93%;
-    margin-left: 3.5%;
-    background-color: #c5fdf3;
-    padding: 2% 0;
-    border-radius: 2.5rem;
-  }
-
   .rides .priveat-new {
     width: 24% !important;
   }
@@ -7587,7 +7387,6 @@
 
   h3.address {
     font-size: 32px;
-    color: #303747;
   }
 
   .rentalscar {
@@ -7671,26 +7470,12 @@
     width: 100%;
   }
 
-  a.linklaster {
-    color: inherit;
-    transition: 2s;
-  }
-
   a.width {
     font-size: 14px;
   }
 
-  a.linklaster:hover {
-    color: #f75f62;
-  }
-
   span.icon-car {
     width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 0%;
-    margin-bottom: 3%;
   }
 
   span.svg-car {
@@ -7705,14 +7490,6 @@
     margin: 0% 5% 1% 0%;
     border-radius: 100%;
     transform: rotateZ(37deg);
-  }
-
-  .space.no-top {
-    width: 100%;
-    margin-left: 0%;
-    background-color: #c5fdf3;
-    border-radius: 2.5rem;
-    padding: 3% 0;
   }
 
   .width-new {
@@ -7744,26 +7521,10 @@
 
   li.forride,
   li.spareseat {
-    display: flex;
-    align-items: center;
-    margin-bottom: 2%;
-    background: #e9edf3 none repeat scroll 0 0;
-    border: 1px solid #e7dcdc73;
-    border-radius: 5px;
     padding: 3% 1% 3% 4%;
-    transition: 1s;
-  }
-
-  li.forride:hover,
-  li.spareseat:hover {
-    box-shadow: 1px 0px 20px 6px rgb(0 20 255 / 28%);
-    border-color: transparent;
   }
 
   .rider-avatar img {
-    box-shadow: 5px 10px 20px 0 rgb(46 58 87 / 36%);
-    border-color: #ddbcbc73;
-    border-radius: 50%;
     width: 80%;
   }
 
@@ -7795,11 +7556,6 @@
     color: #f75f62;
     position: absolute;
     right: 0;
-  }
-
-  .space {
-    width: 100%;
-    margin-top: 5%;
   }
 
   .conteainer {
@@ -8619,6 +8375,11 @@
     height: 42px !important;
     font-size: 32px !important;
   }
+  
+  .eltripLogo{
+    width: 30%;
+    left: 35% !important;
+  }
 
   .clickorstop {
     margin-top: 8%;
@@ -8659,11 +8420,6 @@
     margin-left: 5%;
   }
 
-  .CarCarry {
-    width: 100%;
-    margin-top: 6%;
-  }
-
   .display {
     width: 100%;
     margin-left: 0;
@@ -8676,16 +8432,6 @@
 
   h1.aboutofcar {
     font-size: 32px;
-    color: #303747;
-  }
-
-  h5.aboutofcar {
-    display: inline-block;
-    font-size: 14px;
-    padding-top: 10px;
-    text-transform: uppercase;
-    width: 100%;
-    color: #999;
   }
 
   .car-carry {
@@ -8709,9 +8455,6 @@
     margin: 1% 7%;
     height: 120px;
     padding: 0;
-    background-color: #DDE6ED;
-    border: 1px solid #ede7e79c;
-    border-radius: 2.5rem;
   }
 
   .icon1-car,
@@ -8886,10 +8629,6 @@
     color: white;
   }
 
-  .rides {
-    padding: 2%;
-  }
-
   .rides .priveat-new {
     width: 24% !important;
   }
@@ -8981,23 +8720,8 @@
     width: 100%;
   }
 
-  a.linklaster {
-    color: inherit;
-    transition: 2s;
-  }
-
   a.width {
     font-size: 14px;
-  }
-
-  a.linklaster:hover {
-    color: #f75f62;
-  }
-
-  .space.no-top {
-    width: 100%;
-    margin-left: 0%;
-    padding: 0;
   }
 
   .width-new {
@@ -9031,26 +8755,7 @@
 
   li.forride,
   li.spareseat {
-    display: flex;
-    align-items: center;
-    margin-bottom: 2%;
-    background: #e9edf3 none repeat scroll 0 0;
-    border: 1px solid #e7dcdc73;
-    border-radius: 5px;
     padding: 3% 1% 3% 4%;
-    transition: 1s;
-  }
-
-  li.forride:hover,
-  li.spareseat:hover {
-    box-shadow: 1px 0px 20px 6px rgb(0 20 255 / 28%);
-    border-color: transparent;
-  }
-
-  .rider-avatar img {
-    box-shadow: 5px 10px 20px 0 rgb(46 58 87 / 36%);
-    border-color: #ddbcbc73;
-    border-radius: 50%;
   }
 
   .rider-meta {
@@ -9081,11 +8786,6 @@
     color: #f75f62;
     position: absolute;
     right: 0;
-  }
-
-  .space {
-    width: 100%;
-    margin-top: 5%;
   }
 
   .conteainer {
@@ -9677,6 +9377,10 @@
     font-size: 32px !important;
   }
 
+  .eltripLogo{
+    width: 30%;
+    left: 35% !important;
+  }
 
   .overlay .closebtn {
     position: absolute;
@@ -9707,16 +9411,6 @@
 
   h1.aboutofcar {
     font-size: 32px;
-    color: #303747;
-  }
-
-  h5.aboutofcar {
-    display: inline-block;
-    font-size: 14px;
-    padding-top: 10px;
-    text-transform: uppercase;
-    width: 100%;
-    color: #999;
   }
 
   .car-carry {
@@ -9865,7 +9559,6 @@
 
   h3.address {
     font-size: 32px;
-    color: #303747;
   }
 
   .rentalscar {
@@ -9953,26 +9646,12 @@
     width: 100%;
   }
 
-  a.linklaster {
-    color: inherit;
-    transition: 2s;
-  }
-
   a.width {
     font-size: 14px;
   }
 
-  a.linklaster:hover {
-    color: #f75f62;
-  }
-
   span.icon-car {
     width: 37%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 0%;
-    margin-bottom: 3%;
   }
 
   span.svg-car {
@@ -9987,14 +9666,6 @@
     margin: 0% 5% 1% 0%;
     border-radius: 100%;
     transform: rotateZ(37deg);
-  }
-
-  .space.no-top {
-    width: 100%;
-    margin-left: 0;
-    background-color: #c5fdf3;
-    border-radius: 2.5rem;
-    padding: 3% 0;
   }
 
   .width-new {
@@ -10026,26 +9697,7 @@
 
   li.forride,
   li.spareseat {
-    display: flex;
-    align-items: center;
-    margin-bottom: 2%;
-    background: #e9edf3 none repeat scroll 0 0;
-    border: 1px solid #e7dcdc73;
-    border-radius: 5px;
     padding: 3% 1% 3% 4%;
-    transition: 1s;
-  }
-
-  li.forride:hover,
-  li.spareseat:hover {
-    box-shadow: 1px 0px 20px 6px rgb(0 20 255 / 28%);
-    border-color: transparent;
-  }
-
-  .rider-avatar img {
-    box-shadow: 5px 10px 20px 0 rgb(46 58 87 / 36%);
-    border-color: #ddbcbc73;
-    border-radius: 50%;
   }
 
   .rider-meta {
@@ -10076,11 +9728,6 @@
     color: #f75f62;
     position: absolute;
     right: 0;
-  }
-
-  .space {
-    width: 100%;
-    margin-top: 5%;
   }
 
   .conteainer {
@@ -10456,12 +10103,6 @@
     font-size: 32px !important;
   }
 
-
-  .CarCarry {
-    width: 100%;
-    margin-top: 6%;
-  }
-
   .display {
     width: 100%;
     margin-left: 0;
@@ -10474,16 +10115,6 @@
 
   h1.aboutofcar {
     font-size: 32px;
-    color: #303747;
-  }
-
-  h5.aboutofcar {
-    display: inline-block;
-    font-size: 14px;
-    padding-top: 10px;
-    text-transform: uppercase;
-    width: 100%;
-    color: #999;
   }
 
   .car-carry {
@@ -10527,11 +10158,6 @@
 
   span.icon-car {
     width: 37%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 0%;
-    margin-bottom: 3%;
   }
 
   span.svg-car {
@@ -10581,11 +10207,6 @@
 
   div#links-condition {
     width: 19%;
-  }
-
-  .rides {
-    width: 95%;
-    margin-left: 2.5%;
   }
 
   .register {
@@ -14564,7 +14185,7 @@
 
   .link4section {
     font-size: 25px;
-    margin: 4% 0;
+    margin: 4% 5%;
   }
 
   .aboutdriver {
@@ -14994,6 +14615,7 @@
   .link1-section span,
   a.link-section-three {
     width: 70% !important;
+    font-size: 30px;
   }
 
   .link4section {
@@ -15052,6 +14674,7 @@
   .link1-section span,
   a.link-section-three {
     width: 70% !important;
+    font-size: 30px;
   }
 
   .link4section {
@@ -15150,7 +14773,7 @@
     width: 70%;
   }
 
-  form#d-flex {
+  #d-flex {
     width: 60%;
     padding: 0% 3% 0% 0%;
   }
@@ -15168,7 +14791,7 @@
   svg#icon-lock,
   svg#icon-check,
   .button-post {
-    font-size: 11px;
+    font-size: 15px;
     margin-right: 5%;
   }
 
